# LibGodotSharp

./: .gitmodules  GodotSharpGDExtension.sln
DemoLibrary/: Class1.cs  DemoLibrary.csproj
GodotSharpGDExtension/: CMakeLists.txt  SConstruct
GodotSharpGDExtension.CSharp/: AndroidTest.cs  GDExtensionMain.cs  GodotSharpGDExtension.CSharp.csproj  GodotSharpGDExtensionCustomCallable.cs  Native.cs  Notification.cs  ResourceHelper.cs  SaftyRapper.cs  StringMarshall.cs  Variant.cs  Wrapped.cs
GodotSharpGDExtension.CSharp.SourceGenerator/: Entry.cs  Export.cs  GenNotification.cs  GenVirtual.cs  Generator.cs  GodotSharpGDExtension.CSharp.SourceGenerator.csproj  Methods.cs  Register.cs  Renamer.cs  Signal.cs
GodotSharpGDExtension/src/: dotnet_api.cpp  dotnet_api.h  native_calls.h  nativehost.cpp  nativehost.h  register_types.cpp  register_types.h  test.h
GodotSharpGDExtension/src/script_interop/: fsharp_method_info.cpp  fsharp_method_info.h  fsharp_script.cpp  fsharp_script.h  script_interop.cpp
GodotSharpGDExtension/src/swig/: godot_sharp_swig_wrap.cxx  script_interop_wrap.cxx  script_interop_wrap.h
GodotSharpGDExtension/swig_modules/: godot_sharp_swig.i  script_interop.i
GodotSharpGDExtension/swig_modules/godot/: array.i  global_constants.i  godot_string.i  interface.i  node.i  object.i  property_info.i  string_name.i  typed_array.i  variant.i
GodotSharpGDExtension/swig_modules/script_interop/: fsharp_method_info.i  fsharp_script.i
LibGodotSharpAndroid/: build.bat
LibGodotSharpDesktop/: LibGodotSharpDesktop.csproj
ScriptInterop.CSharp/: Entry.cs  Test.cs  (+1 more)
(+152 files in other folders)
